--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -56,9 +56,9 @@ jobs:
       env:
         TAG: ${{ env.gitversion }}
       run: |
-        git -C ${{ env.git_repo_name }} config user.name "GitHub Actions Bot"
-        git -C ${{ env.git_repo_name }} config user.email "<>"
-        git -C ${{ env.git_repo_name }} tag "${TAG}" || true
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<>"
+        git tag "${TAG}" || true
     
     - name: Release
       uses: softprops/action-gh-release@v1
