--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -59,12 +59,12 @@ jobs:
         git config user.name "GitHub Actions Bot"
         git config user.email "<>"
         git tag "${TAG}" || true
+        git push --tags
+
     
     - name: Release
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+      # if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
           dist/getos
-      env:
-        GITHUB_REPOSITORY: my_gh_org/my_gh_repo
