--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -66,5 +66,6 @@ jobs:
       uses: softprops/action-gh-release@v1
       # if: startsWith(github.ref, 'refs/tags/')
       with:
+        tag_name: ${{ env.gitversion }}
         files: |
           dist/getos
