--- a/.github/actions/build-pyinstaller/action.yml
+++ b/.github/actions/build-pyinstaller/action.yml
@@ -18,8 +18,8 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - name: Checkout the repo
-      uses: actions/checkout@v2
+    # - name: Checkout the repo
+    #   uses: actions/checkout@v2
 
     - name: python build
       shell: bash
