--- a/.github/actions/build-pyinstaller/action.yml
+++ b/.github/actions/build-pyinstaller/action.yml
@@ -13,13 +13,15 @@ inputs:
   version:  # id of input
     required: true
 outputs:
-  artifact_name:
+  artifact-name:
     description: "Artifact Name"
-    value: ${{ steps.set-names.outputs.artifact_name }}
-  artifact_file:
+    value: ${{ steps.set-names.outputs.artifact-name }}
+  artifact-file:
     description: "Artifact File"
-    value: ${{ steps.set-names.outputs.artifact_file }}
-    
+    value: ${{ steps.set-names.outputs.artifact-file }}
+  artifact-path:
+    description: "Artifact Path"
+    value: ${{ steps.set-names.outputs.artifact-name }}/${{ steps.set-names.outputs.artifact-file }}
 runs:
   using: "composite"
   steps:
@@ -40,15 +42,16 @@ runs:
       run: |
         ARTIFACT_NAME=${{ inputs.version }}-${{ inputs.os }}
         echo "artifact_name=${ARTIFACT_NAME}" | tee -a $GITHUB_ENV
-        echo "::set-output name=artifact_name::${ARTIFACT_NAME}"
+        echo "::set-output name=artifact-name::${ARTIFACT_NAME}"
         ARTIFACT_FILE="$(basename dist/${{ inputs.distname }} | sed 's/\(.*\)\..*/\1/')".zip
         echo "artifact_file=${ARTIFACT_FILE}" | tee -a $GITHUB_ENV
+        echo "::set-output name=artifact-file::${ARTIFACT_FILE}"
         zip ${ARTIFACT_FILE} dist/${{ inputs.distname }}
     
     - name: upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ env.artifact_name }}
+        name: ${{ env.artifact-name }}
         path: |
-          ${{ env.artifact_file }}
+          ${{ env.artifact-file }}
         retention-days: 1
