--- a/.github/actions/build-pyinstaller/action.yml
+++ b/.github/actions/build-pyinstaller/action.yml
@@ -57,7 +57,7 @@ runs:
     - name: upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ env.artifact-name }}
+        name: ${{ env.artifact_name }}
         path: |
-          ${{ env.artifact-file }}
+          ${{ env.artifact_file }}
         retention-days: 1
