--- a/.github/actions/build-pyinstaller/action.yml
+++ b/.github/actions/build-pyinstaller/action.yml
@@ -43,7 +43,7 @@ runs:
         ARTIFACT_NAME=${{ inputs.version }}-${{ inputs.os }}
         echo "artifact_name=${ARTIFACT_NAME}" | tee -a $GITHUB_ENV
         echo "::set-output name=artifact-name::${ARTIFACT_NAME}"
-        ARTIFACT_FILE="$(basename dist/${{ inputs.distname }} | sed 's/\(.*\)\..*/\1/')".zip
+        ARTIFACT_FILE="$(basename dist/${{ inputs.distname }} | sed 's/\(.*\)\..*/\1/')"-${{ inputs.version }}-${{ inputs.os }}.zip
         echo "artifact_file=${ARTIFACT_FILE}" | tee -a $GITHUB_ENV
         echo "::set-output name=artifact-file::${ARTIFACT_FILE}"
         if command -v powershell; then
