--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -79,9 +79,26 @@ jobs:
         os: windows
         version: ${{ needs.set_version.outputs.gitversion }}
 
+  build_macos:
+    if: ${{ ( github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '#build') || (github.ref  == 'refs/heads/main') || (github.ref  == 'refs/heads/master')) && !contains(github.event.head_commit.message, '#skip-build') }}
+    needs: set_version
+    runs-on: macos-latest
+    outputs:
+      artifact-path: ${{ steps.build-pyinstaller.outputs.artifact-path}}
+    steps:
+    - uses: actions/checkout@v2
+    - name: build-pyinstaller
+      id: build-pyinstaller
+      uses: ./.github/actions/build-pyinstaller
+      with:
+        sourcename: getos.py
+        distname: getos
+        os: MacOS
+        version: ${{ needs.set_version.outputs.gitversion }}
+
   release_artifacts:
     if: ${{ ( github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '#build') || (github.ref  == 'refs/heads/main') || (github.ref  == 'refs/heads/master')) && !contains(github.event.head_commit.message, '#skip-build') }}
-    needs: ["set_version", "build_linux", "build_windows"]
+    needs: ["set_version", "build_linux", "build_windows", "build_macos"]
     runs-on: ubuntu-latest
     steps:
     - name: download artifacts
@@ -101,3 +118,4 @@ jobs:
         files: |
           ${{steps.download-artifacts.outputs.download-path}}/${{needs.build_linux.outputs.artifact-path}}
           ${{steps.download-artifacts.outputs.download-path}}/${{needs.build_windows.outputs.artifact-path}}
+          ${{steps.download-artifacts.outputs.download-path}}/${{needs.build_macos.outputs.artifact-path}}
